[gd_scene load_steps=2 format=3 uid="uid://bxvm116c3gr7j"]

[ext_resource type="Script" path="res://PitchShift.gd" id="1_idhen"]

[node name="PitchShift" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Metal"
script = ExtResource("1_idhen")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 57

[node name="PitchShift" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pitch Shift"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Active"

[node name="Remove" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Remove Effect"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 20
columns = 3

[node name="Prop1" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pitch Scale"

[node name="Prop11" type="HSlider" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 16.0
step = 0.05

[node name="Prop111" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "50"

[node name="Prop2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Oversampling"

[node name="Prop22" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0

[node name="Prop222" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Prop3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "FFT SIZE"

[node name="Prop33" type="OptionButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 6
popup/item_0/text = "FFT_SIZE_256"
popup/item_0/id = 0
popup/item_1/text = "FFT_SIZE_512"
popup/item_1/id = 1
popup/item_2/text = "FFT_SIZE_1024"
popup/item_2/id = 2
popup/item_3/text = "FFT_SIZE_2048"
popup/item_3/id = 3
popup/item_4/text = "FFT_SIZE_4096"
popup/item_4/id = 4
popup/item_5/text = "FFT_SIZE_MAX"
popup/item_5/id = 5

[node name="Prop333" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Remove" to="." method="_on_remove_button_down"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop11" to="." method="_on_prop_11_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/Prop22" to="." method="_on_prop_22_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/Prop33" to="." method="_on_prop_33_item_selected"]
